# dsm

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  README_SHARDING.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-web.txt
.github/: CODEOWNERS
.github/workflows/: ci.yml  release-pypi.yml
docs/: API_REFERENCE.md  DARYL_SHARDING_v1.0_SPEC.md  PHASE2_INSTALLATION_REPORT.md  PHASE2_PLAN.md  SECURITY_CONSIDERATIONS.md  daryl_sharding_critique_analysis.md  spec_global_memory_architecture.md
examples/: phase2_complete_example.py
src/: embedding_service.py  link_validator.py  memory_cleaner.py  memory_compressor.py  memory_sharding_system.py  semantic_search.py  semantic_search_header.py
src/cli/: __init__.py  daryl_memory_cli.py
src/config/: ttl_config.json
src/webui/: __init__.py  app.py
src/webui/static/: __init__.py  app.js  style.css
src/webui/templates/: __init__.py  index.html
tests/: __init__.py  test_dsm.py  test_phase2.py
