[build-system]
requires = ["setuptools>=69.0,<77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daryl-sharding-memory"
version = "0.4.0"
description = "Domain-sharded persistent memory system for AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "DARYL-LABS" }
]
keywords = ["ai", "memory", "agent", "semantic-search", "sharding"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
  "numpy>=1.26.0"
]

[project.optional-dependencies]
web = [
  "fastapi>=0.116.0",
  "jinja2>=3.1.0",
  "uvicorn[standard]>=0.35.0"
]
ml = [
  "sentence-transformers>=3.0.0"
]
dev = [
  "build>=1.2.2",
  "fastapi>=0.116.0",
  "jinja2>=3.1.0",
  "pre-commit>=4.0.0",
  "pytest>=8.0.0",
  "twine>=6.1.0",
  "uvicorn[standard]>=0.35.0"
]

[project.urls]
Homepage = "https://github.com/buralux/dsm"
Repository = "https://github.com/buralux/dsm"
Issues = "https://github.com/buralux/dsm/issues"
Documentation = "https://github.com/buralux/dsm/tree/main/docs"

[project.scripts]
daryl-memory = "cli.daryl_memory_cli:main"
dsm-webui = "webui.app:serve"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["cli", "webui", "webui.static", "webui.templates"]
py-modules = [
  "embedding_service",
  "link_validator",
  "memory_cleaner",
  "memory_compressor",
  "memory_sharding_system",
  "semantic_search",
  "semantic_search_header"
]
include-package-data = true

[tool.setuptools.package-data]
webui = ["templates/*.html", "static/*.js", "static/*.css"]
